b=713572 don't draw from BasicThebesLayerBuffers when transaction is incomplete r=roc

--HG--
extra : rebase_source : a85034d1207100a3563e7bb8b92ea696c91ac206